--- a/provisioning/roles/apache/handlers/main.yml
+++ b/provisioning/roles/apache/handlers/main.yml
@@ -1,8 +1,10 @@
 ---
   - name: reload apache
-    service: name=httpd state=reloaded
+    service: 
+      name: "{{ apache }}" 
+      state: reloaded
 
   - name: restart apache
-    service: name=httpd state=restarted
-
-
+    service: 
+      name: "{{ apache }}" 
+      state: restarted
