--- a/provisioning/roles/mysql/handlers/main.yml
+++ b/provisioning/roles/mysql/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: restart mysql
-  service: name=mysqld state=restarted
+- name: restart-mysql
+  service: name={{ mysql_service_name }} state=restarted
 
 
 
