add space to the script Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ env:
 
 script:
 
-ansible-playbook -i provisioning/roles/apache/tests/inventory tests/test.yml --syntax-check
+  - ansible-playbook -i provisioning/roles/apache/tests/inventory tests/test.yml --syntax-check
