--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 ---
-services: docker
+language: python
+python: "2.7"
 
-env:
-  - distro: centos6
+before_install:
+  # Make sure everything's up to date.
+  - sudo apt-get update -qq
+
+install:
+  # Install Ansible.
+  - pip install ansible
 
 script:
 
