--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
 
 script:
 
-  - ansible-playbook -i provisioning/roles/apache/tests/inventory tests/test.yml --syntax-check
+  - ansible-playbook -i provisioning/roles/apache/tests/inventory provisioning/roles/apache/tests/test.yml --syntax-check
