--- a/provisioning/roles/apache/tasks/main.yml
+++ b/provisioning/roles/apache/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
-  - name: Include OS-specific variables.
-    include_vars: "{{ ansible_os_family }}.yml"
+          - name: Include OS-specific variables.
+    include_
+    vars: "{{ ansible_os_family }}.yml"
 
   - name: Install libselinux python for ansible copying file
     yum:
