--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
 ---
-language: python
-python: "2.7"
+# We need sudo for some of the Docker commands.
+sudo: required
+
+env:
+  # Provide a list of OSes we want to use for testing.
+  - distro: centos6
+    init: /sbin/init
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+# Tell Travis to start Docker when it brings up an environment.
+services:
+  - docker
 
 before_install:
-  # Make sure everything's up to date.
-  - sudo apt-get update -qq
-
-install:
-  # Install Ansible.
-  - pip install ansible
+  # Pull the image from Docker Hub for the OS under test.
+  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
 
 script:
+  - container_id=$(mktemp)
 
-  - bash build.sh
+  - 'docker run --detach --volume="${PWD}/provisioning/roles/":/etc/ansible/roles:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
+
+  - 'sudo docker exec  -w /etc/ansible/roles/  "$(cat ${container_id})"  ansible-playbook apache/tests/test.yml --syntax-check'
+
+notifications:
+  # Notify Ansible Galaxy when a role builds successfully.
