--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 
   - 'docker run --detach --volume="${PWD}/provisioning/roles/":/etc/ansible/roles:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
 
-  - 'sudo docker exec  -w /etc/ansible/roles/  "$(cat ${container_id})"  ansible-playbook apache/tests/test.yml --syntax-check'
+  - sudo docker exec  -w /etc/ansible/roles/  $container_id   ansible-playbook apache/tests/test.yml --syntax-check
 
 notifications:
   # Notify Ansible Galaxy when a role builds successfully.
