--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
 #  - distro: ubuntu1404
 #  - distro: debian9
 #  - distro: debian8
+   - role_dir: TRAVIS_BUILD_DIR/provisioning/roles/apache
 
 script:
 
