--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@
 services: docker
 
 env:
-#  - distro: centos7
   - distro: centos6
-#  - distro: ubuntu1804
-#  - distro: ubuntu1604
-#  - distro: ubuntu1404
-#  - distro: debian9
-#  - distro: debian8
+  - distro: ubuntu1804
+  - distro: ubuntu1604
+  - distro: ubuntu1404
 
 script:
 
