Prefer IPv4 over IPv6 for apt so it doesn't freeze on IPv4-only networks

--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -5,6 +5,11 @@
 
     - name: run pre tasks on ubuntu
       block:
+        - name: disable IPV6 for apt-get
+          copy:
+            src: 99force-ipv4.txt
+            dest: /etc/apt/apt.conf.d/99force-ipv4
+          
         - name: update apt cache
           apt: 
             update_cache: yes
